--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
+*{
+  box-sizing: border-box;
+}
+body{
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #46529d;
+  color: #fff;
+}
+.text-center{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  width: 60%;
+  margin: 10% auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.listTasks{
+  background-color: #fff;
+  color: #46529d;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.listTasks p{
+  margin: 0;
+  text-align: center;
+  padding: 10px 0;
 }
-
-.App-link {
-  color: #61dafb;
+.listTasks span, .listTasks input{
+  display: inline-block;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 20px;
+  border: 0.3px solid #ccc;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.listTasks span.title{
+  background-color: #2ebaee;
+  columns: #fff;
+}
+.listTasks .descrip{
+  width: 50%;
+  color: #46529d;
+}
+form input[type=text]{
+  width: 55%;
+}
+.listTasks span.isDone{
+  width: 30%;
+}
+.listTasks span.action{
+  width: 20%;
+}
+.listTasks span.icon{
+  color: #f00;
+  cursor: pointer;
+}
+form input{
+  padding: 10px;
+  background-color: #ebebeb;
+  border: transparent;
+  border: 0.3px solid #ccc;
+}
+.btn{
+  background-color: #2ebaee;
+  border: 0.3px solid #ccc;
+  color: #fff;
+  width: 15%;
+  cursor: pointer;
 }
